--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -232,6 +232,23 @@ config CPU_FREQ_GOV_ONDEMAND
 
 	  If in doubt, say N.
 
+
+config CPU_FREQ_GOV_BLU_ACTIVE
+ 	tristate "'blu_active' cpufreq policy governor"
+ 	help
+ 	  'blu_active' - This driver adds a dynamic cpufreq policy governor
+ 	  designed for latency-sensitive workloads.
+ 
+ 	  This governor attempts to reduce the latency of clock
+ 	  increases so that the system is more responsive to
+ 	  interactive workloads.
+ 
+ 	  To compile this driver as a module, choose M here: the
+ 	  module will be called cpufreq_blu_active.
+ 
+ 	  If in doubt, say N.
+
+
 config CPU_FREQ_GOV_INTERACTIVE
 	tristate "'interactive' cpufreq policy governor"
 	help
@@ -402,12 +419,20 @@ config CPU_BOOST
 	tristate "Event base short term CPU freq boost"
 	depends on CPU_FREQ
 	help
+
+
+config FINGERPRINT_BOOST
+	bool "Fingerprint Boost"
+	default y
+	help
+	  Boosts available CPUs to max frequency on fingerprint sensor input.
 	  This driver boosts the frequency of one or more CPUs based on
 	  various events that might occur in the system. As of now, the
 	  events it reacts to are:
 	  - Migration of important threads from one CPU to another.
 
 	  If in doubt, say N.
+	  
 
 config CPU_FREQ_GOV_YANKACTIVE
 	  tristate "'yankactive' cpufreq policy governor"
