--- a/arch/arm/boot/dts/qcom/markw/msm8953.dtsi
+++ b/arch/arm/boot/dts/qcom/markw/msm8953.dtsi
@@ -1,5 +1,6 @@
 /*
- * Copyright (c) 2015-2018, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2017 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -26,6 +27,33 @@
 		bootargs = "sched_enable_hmp=1 sched_enable_power_aware=1";
 	};
 
+	cpus {
+		cpu@0 {
+			clock-frequency = <2016000>;
+		};
+		cpu@1 {
+			clock-frequency = <2016000>;
+		};
+		cpu@2 {
+			clock-frequency = <2016000>;
+		};
+		cpu@3 {
+			clock-frequency = <2016000>;
+		};
+		cpu@100 {
+			clock-frequency = <2016000>;
+		};
+		cpu@101 {
+			clock-frequency = <2016000>;
+		};
+		cpu@102 {
+			clock-frequency = <2016000>;
+		};
+		cpu@103 {
+			clock-frequency = <2016000>;
+		};
+	};
+	
 	reserved-memory {
 		#address-cells = <2>;
 		#size-cells = <2>;
@@ -532,13 +560,13 @@
 
 		qcom,vdd-gfx-rstr {
 			qcom,vdd-rstr-reg = "vdd-gfx";
-			qcom,levels = <5 7 7>; /* Nominal, Turbo, Turbo */
+			qcom,levels = <5 7 8>; /* Nominal, Turbo, Turbo */
 			qcom,min-level = <1>; /* No Request */
 		};
 
 		msm_thermal_freq: qcom,vdd-apps-rstr {
 			qcom,vdd-rstr-reg = "vdd-apps";
-			qcom,levels = <1689600>;
+			qcom,levels = <400457 2016000 2208000>;
 			qcom,freq-req;
 		};
 	};
@@ -557,7 +585,7 @@
 			qcom,mitigation-freq-khz = <1689600>;
 			qcom,vph-high-threshold-uv = <3500000>;
 			qcom,vph-low-threshold-uv = <3200000>;
-			qcom,soc-low-threshold = <10>;
+			qcom,soc-low-threshold = <5>;
 			qcom,thermal-handle = <&msm_thermal_freq>;
 		};
 	};
@@ -847,26 +875,28 @@
 		reg-names = "cc_base";
 		vdd_gfx-supply = <&gfx_vreg_corner>;
 		qcom,gfxfreq-corner =
-			<         0   0 >,
-			< 133330000   1 >,  /* Min SVS   */
-			< 216000000   2 >,  /* Low SVS   */
-			< 320000000   3 >,  /* SVS       */
-			< 400000000   4 >,  /* SVS Plus  */
-			< 510000000   5 >,  /* NOM       */
-			< 560000000   6 >,  /* Nom Plus  */
-			< 650000000   7 >;  /* Turbo     */
+			      <0x0 0>,
+			<100000000 1>,
+			<216000000 2>,
+			<320000000 3>,
+			<400000000 4>,
+			<510000000 5>,
+			<560000000 6>,
+			<650000000 7>,
+			<700000000 8>;
 		#clock-cells = <1>;
 	};
 
 	clock_cpu: qcom,cpu-clock-8953@b116000 {
 		compatible = "qcom,cpu-clock-8953";
-		reg =   <0xb114000  0x68>,
+		reg =
+			<0xb114000  0x68>,
 			<0xb014000  0x68>,
 			<0xb116000  0x400>,
-			<0xb111050  0x08>,
-			<0xb011050  0x08>,
-			<0xb1d1050  0x08>,
-			<0x00a4124  0x08>;
+			<0xb111050  0x0c>,
+			<0xb011050  0x0c>,
+			<0xb1d1050  0x0c>,
+			<0x00a4124  0x0c>;
 		reg-names = "rcgwr-c0-base", "rcgwr-c1-base",
 			    "c0-pll", "c0-mux", "c1-mux",
 			    "cci-mux", "efuse";
@@ -876,77 +906,120 @@
 		clock-names = "xo_a";
 		qcom,num-clusters = <2>;
 		qcom,speed0-bin-v0-cl =
-			<          0 0>,
-			<  652800000 1>,
-			< 1036800000 2>,
-			< 1401600000 3>,
-			< 1689600000 4>,
-			< 1804800000 5>,
-			< 1958400000 6>,
-			< 2016000000 7>;
+					         <0  0>,
+					 <400457000  1>,
+					 <652800000  2>,
+					 <806400000  3>,
+					<1036800000  4>,
+					<1209600000  5>,
+					<1401600000  6>,
+					<1689600000  7>,
+					<1804800000  8>,
+					<1958400000  9>,
+					<2016000000  10>,
+					<2150400000  11>,
+					<2208000000  12>;
 		qcom,speed0-bin-v0-cci =
-			<          0 0>,
-			<  261120000 1>,
-			<  414720000 2>,
-			<  560640000 3>,
-			<  675840000 4>,
-			<  721920000 5>,
-			<  783360000 6>,
-			<  806400000 7>;
+								<0  0>,
+						<160000000  1>,
+						<261120000  2>,
+						<320000000  3>,
+						<414720000  4>,
+						<483840000  5>,
+						<560640000  6>,
+						<675840000  7>,
+						<721920000  8>,
+						<783360000  9>,
+						<806400000  10>,
+						<860160000  11>,
+						<883200000  12>;
+
 		qcom,speed2-bin-v0-cl =
-			<          0 0>,
-			<  652800000 1>,
-			< 1036800000 2>,
-			< 1401600000 3>,
-			< 1689600000 4>,
-			< 1804800000 5>,
-			< 1958400000 6>,
-			< 2016000000 7>;
+										<0  0>,
+						<400457000  1>,
+						<652800000  2>,
+						<806400000  3>,
+					 <1036800000  4>,
+					 <1209600000  5>,
+					 <1401600000  6>,
+					 <1689600000  7>,
+					 <1804800000  8>,
+					 <1958400000  9>,
+					 <2016000000  10>,
+					 <2150400000  11>,
+					 <2208000000  12>;
+
 		qcom,speed2-bin-v0-cci =
-			<          0 0>,
-			<  261120000 1>,
-			<  414720000 2>,
-			<  560640000 3>,
-			<  675840000 4>,
-			<  721920000 5>,
-			<  783360000 6>,
-			<  806400000 7>;
+					         <0  0>,
+					 <160000000  1>,
+					 <261120000  2>,
+					 <320000000  3>,
+					 <414720000  4>,
+					 <483840000  5>,
+					 <560640000  6>,
+					 <675840000  7>,
+					 <721920000  8>,
+					 <783360000  9>,
+					 <806400000  10>,
+					 <860160000  11>,
+					 <883200000  12>;
 		qcom,speed7-bin-v0-cl =
-			<          0 0>,
-			<  652800000 1>,
-			< 1036800000 2>,
-			< 1401600000 3>,
-			< 1689600000 4>,
-			< 1804800000 5>,
-			< 1958400000 6>,
-			< 2016000000 7>,
-			< 2150400000 8>,
-			< 2208000000 9>;
+									<0  0>,
+					<400457000  1>,
+					<652800000  2>,
+					<806400000  3>,
+					<1036800000  4>,
+					<1209600000  5>,
+					<1401600000  6>,
+					<1689600000  7>,
+					<1804800000  8>,
+					<1958400000  9>,
+					<2016000000 10>,
+					<2150400000 11>,
+					<2208000000 12>;
 		qcom,speed7-bin-v0-cci =
-			<          0 0>,
-			<  261120000 1>,
-			<  414720000 2>,
-			<  560640000 3>,
-			<  675840000 4>,
-			<  721920000 5>,
-			<  783360000 6>,
-			<  806400000 7>,
-			<  860160000 8>,
-			<  883200000 9>;
+									<0  0>,
+					<160000000  1>,
+					<261120000  2>,
+					<320000000  3>,
+					<414720000  4>,
+					<483840000  5>,
+					<560640000  6>,
+					<675840000  7>,
+					<721920000  8>,
+					<783360000  9>,
+					<806400000  10>,
+					<860160000  11>,
+					<883200000  12>;
 		qcom,speed6-bin-v0-cl =
-			<          0 0>,
-			<  652800000 1>,
-			< 1036800000 2>,
-			< 1401600000 3>,
-			< 1689600000 4>,
-			< 1804800000 5>;
+									<0  0>,
+					<400457000  1>,
+					<652800000  2>,
+					<806400000  3>,
+				 <1036800000  4>,
+				 <1209600000  5>,
+				 <1401600000  6>,
+				 <1689600000  7>,
+				 <1804800000  8>,
+				 <1958400000  9>,
+				 <2016000000 10>,
+				 <2150400000 11>,
+				 <2208000000 12>;
 		qcom,speed6-bin-v0-cci =
-			<          0 0>,
-			<  261120000 1>,
-			<  414720000 2>,
-			<  560640000 3>,
-			<  675840000 4>,
-			<  721920000 5>;
+									<0  0>,
+					<160000000  1>,
+					<261120000  2>,
+					<320000000  3>,
+					<414720000  4>,
+					<483840000  5>,
+					<560640000  6>,
+					<675840000  7>,
+					<721920000  8>,
+					<783360000  9>,
+					<806400000  10>,
+					<860160000  11>,
+					<883200000  12>;
+
 		#clock-cells = <1>;
 	};
 
@@ -966,15 +1039,18 @@
 			 <&clock_cpu clk_a53_pwr_clk>;
 
 		qcom,cpufreq-table =
-			 <  652800 >,
-			 < 1036800 >,
-			 < 1401600 >,
-			 < 1689600 >,
-			 < 1804800 >,
-			 < 1958400 >,
-			 < 2016000 >,
-			 < 2150400 >,
-			 < 2208000 >;
+			< 400457>,
+			< 652800>,
+			< 806400>,
+			<1036800>,
+			<1209600>,
+			<1401600>,
+			<1689600>,
+			<1804800>,
+			<1958400>,
+			<2016000>,
+			<2150400>,
+			<2208000>;
 	};
 
 	cpubw: qcom,cpubw {
@@ -1028,21 +1104,25 @@
 		cpubw-cpufreq {
 		target-dev = <&cpubw>;
 		cpu-to-dev-map =
-			 <  652800  1611>,
-			 < 1036800  3221>,
-			 < 1401600  5859>,
-			 < 1689600  6445>,
-			 < 1804800  7104>,
-			 < 1958400  7104>,
-			 < 2208000  7104>;
+			< 400457  769>,
+			< 652800 1611>,
+			< 806400 2124>,
+			<1036800 3221>,
+			<1209600 5126>,
+			<1401600 5859>,
+			<1689600 6445>,
+			<1804800 7104>,
+			<1958400 7104>,
+			<2016000 7104>,
+			<2208000 7104>;
 		};
 
 		mincpubw-cpufreq {
 			target-dev = <&mincpubw>;
 			cpu-to-dev-map =
-				<  652800 1611 >,
-				< 1401600 3221 >,
-				< 2208000 5859 >;
+				<400457 769>,
+				<1401600 3221>,
+				<2208000 5859>;
 		};
 	};
 
@@ -1227,7 +1307,6 @@
 		reg = <0xa0128 0x4>;
 		reg-names = "sn-base";
 	};
-
 
 	sec_boot_fuse: secbootfuse@0xa41d0 {
 		compatible = "qcom,sec-boot-fuse";
@@ -1629,9 +1708,9 @@
 		qcom,ce-opp-freq = <100000000>;
 	};
 
-	qcom_seecom: qseecom@84A00000 {
+	qcom_seecom: qseecom@84a00000 {
 		compatible = "qcom,qseecom";
-		reg = <0x84A00000 0x1900000>;
+		reg = <0x84a00000 0x1900000>;
 		reg-names = "secapp-region";
 		qcom,hlos-num-ce-hw-instances = <1>;
 		qcom,hlos-ce-hw-instance = <0>;
@@ -2048,7 +2127,7 @@
 		qcom,msm-bus,name = "usb3";
 		qcom,msm-bus,num-cases = <2>;
 		qcom,msm-bus,num-paths = <1>;
-                qcom,detect-dpdm-floating;
+		qcom,detect-dpdm-floating;
 		qcom,msm-bus,vectors-KBps =
 					<61 512 0 0>,
 					<61 512 240000 800000>;
@@ -2164,9 +2243,9 @@
 		qcom,vdd-voltage-level = <0 925000 925000>;
 
 		qcom,qusb-phy-init-seq = <0xF8 0x80
-					0xB3 0x84
-					0x83 0x88
-					0xC0 0x8C
+					0x53 0x84
+					0x93 0x88
+					0xCf 0x8C
 					0x14 0x9C
 					0x30 0x08
 					0x79 0x0C
