--- a/drivers/cpuquiet/Makefile
+++ b/drivers/cpuquiet/Makefile
@@ -2,3 +2,5 @@ GCOV_PROFILE := y
 
 obj-$(CONFIG_CPU_QUIET) += attribute.o cpuquiet.o governor.o governors/ sysfs.o
 obj-$(CONFIG_CPU_QUIET_MSM) += cpuquiet-msm.o
+
+ccflags-y := -O3
