--- a/arch/arm64/configs/lemper_defconfig
+++ b/arch/arm64/configs/lemper_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.92 Kernel Configuration
+# Linux/arm64 3.18.93 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -36,13 +36,14 @@ CONFIG_CONSTRUCTORS=y
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 
+
 #
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Inferno"
+CONFIG_LOCALVERSION="-Lemper_Kernelv1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -251,6 +252,8 @@ CONFIG_GCOV_KERNEL=y
 CONFIG_GCOV_FORMAT_AUTODETECT=y
 # CONFIG_GCOV_FORMAT_3_4 is not set
 # CONFIG_GCOV_FORMAT_4_7 is not set
+CONFIG_KCOV=y
+
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
@@ -490,6 +493,7 @@ CONFIG_SUSPEND_FREEZER=y
 CONFIG_WAKELOCK=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
+CONFIG_POWERSUSPEND=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
@@ -512,6 +516,15 @@ CONFIG_ARM64_CPU_SUSPEND=y
 #
 # CPU Power Management
 #
+
+CONFIG_CPU_QUIET=y
+CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
+CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=y
+CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
+CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE=y
+# CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
+# CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE is not set
+CONFIG_CPU_QUIET_MSM=y
 
 #
 # CPU Idle
@@ -543,12 +556,21 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+CONFIG_CPU_FREQ_GOV_SLIM=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_FREQ_GOV_SCHED is not set
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
@@ -567,6 +589,7 @@ CONFIG_CPU_FREQ_GOV_LIONFISH=y
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_NET=y
+
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 # CONFIG_DISABLE_NET_SKB_FRAG_CACHE is not set
 
@@ -2205,7 +2228,7 @@ CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_TYPEC=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
-# CONFIG_MSM_BCL_SOMC_CTL is not set
+CONFIG_MSM_BCL_SOMC_CTL=y
 CONFIG_QNS_SYSTEM=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
@@ -3027,6 +3050,7 @@ CONFIG_SND_SOC_WCD9XXX=y
 CONFIG_SND_SOC_WCD9XXX_V2=y
 CONFIG_SND_SOC_WCD_CPE=y
 CONFIG_AUDIO_EXT_CLK=y
+CONFIG_AW8736=y
 CONFIG_SND_SOC_WCD_MBHC=y
 # CONFIG_SND_SOC_WM8510 is not set
 # CONFIG_SND_SOC_WM8523 is not set
