Modified project settings

--- a/project.config
+++ b/project.config
@@ -18,3 +18,6 @@
 [access "refs/tags/*"]
 	push = group user/YudiWidiyanto
 	push = +force group user/YudiWidiyanto
+[receive]
+	requireSignedOffBy = true
+	requireChangeId = true
